2008-11-28  Frank Ch. Eigler  <fche@elastic.org>

	PR 5376.
	* parse.cxx (parse::parse_probe): Prevent alias names from
	being marked "?" or "!".

2008-11-28  Frank Ch. Eigler  <fche@elastic.org>

	PR 6477.
	* elaborate.cxx (print_error_source, print_warning): Tolerate
	NULL token.

2008-11-27  Frank Ch. Eigler  <fche@elastic.org>

	PR 7036
	From Wenji Huang <wenji.huang@oracle.com>:
	* elaborate.cxx (print_error): Don't suppress if listings_mode.
	* main.cxx (main): Suppress "pass N failed" if listings_mode.

2008-11-26  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (dwarf_builder::build): Support debuginfo static uprobes.

2008-11-26  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (emit_module_exit): Add another synchronize_sched.

2008-11-26  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx (main): Advise users to try '--vp ...' after a pass error.

2008-11-26  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (emit_module_exit): Call synchronize_sched during
	module shutdown if it's available.
	* buildrun.cxx (compile_pass): Test for it.

2008-11-25  Frank Ch. Eigler  <fche@elastic.org>

	PR 7046.
	* tapsets.cxx (uprobe*emit_module_decls): Rewrite the generated
	stap_uprobe_change function, to hold mutex for a shorter period
	and to produce more meaningful KERN_INFO traces if -DDEBUG_UPROBES.
	(uprobe*emit_module_exit): Switch to KERN_INFO also.

2008-11-25  Will Cohen <wcohen@redhat.com>

	* scripts/kernel-doc: Clean up SystemTap function formatting.
	
2008-11-25  Will Cohen <wcohen@redhat.com>

	* scripts/kernel-doc: Make executable.
	
2008-11-25  Will Cohen <wcohen@redhat.com>

	* scripts/kernel-doc: New.
	* configure.ac: Add doc/SystemTap_Tapset_Reference/Makefile.
	* configure, doc/SystemTap_Tapset_Reference/Makefile.in: Regenerate.
	
2008-11-25  Mark Wielaard  <mjw@redhat.com>

	* tapsets.cxx (dwarf_derived_probe_group::emit_module_exit):
	struct stap_dwarf_probe field is called pp, not pp_name.
