@@ -1,3 +1,14 @@
+2008-11-28  Elliott Baron  <ebaron@redhat.com>
+
+	PR 6965.
+	* translate.cxx (dump_unwindsyms): Output #ifdef for
+	symbol table.
+	* tapsets/context.stp: moved functions requiring symbols
+	to tapsets/context-symbols.stp and those requiring both
+	symbols and unwinder to tapsets/context-unwind.stp.
+	* tapsets/context-symbols.h: New file.
+	* tapsets/context-unwind.h: New file.
+
 2008-11-28  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR 5376.
